--- a/ReactNativeExoPlayer/src/main/res/layout/activity_mera_bow_exo_player.xml
+++ b/ReactNativeExoPlayer/src/main/res/layout/activity_mera_bow_exo_player.xml
@@ -3,7 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/parent_view"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="#000000">
 
     <com.google.android.material.progressindicator.CircularProgressIndicator
         android:id="@+id/loader"
